@@ -111,12 +111,12 @@ class GraphTestCase(unittest.TestCase):
 class MemoryGraphTestCase(GraphTestCase):
     backend = "Memory"
 
- try:
-     import backends.Sleepycat
-     class SleepycatGraphTestCase(GraphTestCase):
-         backend = "Sleepycat"
- except ImportError:
-     pass
+try:
+    import backends.Sleepycat
+    class SleepycatGraphTestCase(GraphTestCase):
+        backend = "Sleepycat"
+except ImportError:
+    pass
 
 try:
     import persistent
